--- a/cidr2022/grid.css
+++ b/cidr2022/grid.css
@@ -20,6 +20,8 @@
             [time-1430] auto
             [time-1500] auto
             [time-1600] auto
+            [time-1700] auto
+            [time-1730] auto
 			[time-1800] auto
             [time-1930] auto;
             
